--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="navigation" id="navigation-scroll">
                         <div class="row">
                             <div class="col-md-11 col-xs-10">
-                                <a href="index.html"><span id="logo"><strong class="strong">F</strong>RIENDS <strong class="strong">F</strong>OREVER</span></a>
+                                <a href="index1.html"><span id="logo"><strong class="strong">F</strong>RIENDS <strong class="strong">F</strong>OREVER</span></a>
                             </div>
                             <div class="col-md-1 col-xs-2">
                                 <p class="nav-button">
@@ -80,7 +80,7 @@
                             <i class="fa fa-picture-o pull-left"></i>
                             <strong>GALLERY</strong>
                             <br/>HERE </a>
-                            <a href="nextpage/index.html" class="btn btn-download wow animated fadeInRight">
+                            <a href="nextpage/index1.html" class="btn btn-download wow animated fadeInRight">
                             <i class="fa fa-users pull-left"></i>
                             <strong>PROFILE </strong>
                             <br/>HERE </a>   
@@ -552,7 +552,7 @@
                     </h6>-->
                 </div>
                 <div class="col-md-3 contact-item col-sm-6 col-xs-12 wow animated fadeInLeft">
-                    <a href="nextpage/index.html">
+                    <a href="nextpage/index1.html">
                     <i class="fa fa-users"></i></a>
                     <h3>Friends</h3>
                     <!--<h6 class="contact">
@@ -611,7 +611,7 @@
         <nav>
         <ul>
             <li class="hideit"><a href="#header">Home</a></li>
-            <li class="hideit"><a href="nextpage/index.html">FRIENDS</a></li>
+            <li class="hideit"><a href="nextpage/index1.html">FRIENDS</a></li>
             <li class="hideit"><a href="GalleryRoom/index2.html">GALLERY</a></li>
             <li class="hideit"><a href="#gallery">IMAGES</a></li>
             <li class="hideit"><a href="#testimonial">THOUGHTS</a></li>
