--- a/nextpage/index1.html
+++ b/nextpage/index1.html
@@ -461,11 +461,11 @@
         <div class="sky-color"></div>
       </div>
     </main>
-    <script src="../ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.fullPage.js"></script>
-    <script src="../cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
+    <script src="assets/js/anime.min.js"></script>
     <script src="assets/js/parallax.js"></script>
-    <script src="../cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js"></script>
+    <script src="assets/js/barba.min.js"></script>
     <script src="assets/js/common.min.js"></script>
   </body>
 
