--- a/nextpage/index1.html
+++ b/nextpage/index1.html
@@ -28,7 +28,7 @@
       <nav class="global-nav">
         <ul class="global-nav__list">
           <li><a href="../index.html">HOME</a></li>
-          <li><a href="../GalleryRoom/index2.html">FUN GAME</a></li>
+          <li><a href="../GalleryRoom/index2.html">GALLERY</a></li>
           <li><a href="https://balakram.github.io/balakramtudu/">ABOUT ME</a></li>
           <!--<li><a href="../secondpage/indeex.html">NEXT PAGE</a></li>-->
            </ul>
